--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,5 +1,4 @@
 <resources>
-
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
@@ -12,5 +11,10 @@
         <item name="android:textColorSecondary">@color/primary_light_alpha50</item>
     </style>
 
-    <style name="RecyclerTabLayoutTheme.Basic"></style>
+    <style name="RecyclerTabLayoutTheme.Basic"/>
+
+    <style name="AppLauncherTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:windowFullscreen">true</item>
+        <item name="android:windowBackground">@mipmap/dl_bg</item>
+    </style>
 </resources>
