用户基本信息以及用户信息修改界面实现
Code Source From: Self Code
Description:  [Optional]
Jira:  #[Optional]
市场项目编号（名称）：[Optional]

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -42,14 +42,13 @@
             android:layout_marginRight="@dimen/margin_1334_750_w30"
             android:layout_marginTop="@dimen/margin_1334_750_h30"
             android:background="@drawable/dl_edt_style"
-            android:drawableLeft="@mipmap/dl_icon_yh"
             android:drawablePadding="@dimen/margin_1334_750_w20"
             android:drawableStart="@mipmap/dl_icon_yh"
             android:hint="@string/dl_hint_username"
             android:imeOptions="actionNext"
-            android:inputType="textPersonName"
+            android:inputType="text"
             android:maxLength="32"
-            android:paddingLeft="@dimen/margin_1334_750_w20"
+            android:paddingStart="@dimen/margin_1334_750_w20"
             android:singleLine="true"
             android:textColor="@color/color_666666"
             android:textColorHint="@color/color_999999"
@@ -64,13 +63,13 @@
             android:layout_marginRight="@dimen/margin_1334_750_w30"
             android:layout_marginTop="@dimen/margin_1334_750_h20"
             android:background="@drawable/dl_edt_style"
-            android:drawableLeft="@mipmap/dl_icon_mm"
+            android:drawableStart="@mipmap/dl_icon_mm"
             android:drawablePadding="@dimen/margin_1334_750_w20"
             android:hint="@string/dl_hint_password"
             android:imeOptions="actionDone"
             android:inputType="textPassword"
             android:maxLength="32"
-            android:paddingLeft="@dimen/margin_1334_750_w20"
+            android:paddingStart="@dimen/margin_1334_750_w20"
             android:singleLine="true"
             android:textColor="@color/color_666666"
             android:textColorHint="@color/color_999999"
