密码修改功能实现
Code Source From: Self Code
Description:  密码修改功能实现
Jira:  #[Optional]
市场项目编号（名称）：[Optional]

--- a/app/src/main/res/layout/activity_user_basic.xml
+++ b/app/src/main/res/layout/activity_user_basic.xml
@@ -35,7 +35,8 @@
             android:id="@+id/tvLoginName"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:gravity="center"
+            android:layout_weight="1"
+            android:gravity="start|center_vertical"
             android:maxLines="1" />
     </LinearLayout>
 
