--- a/app/src/main/res/layout/activity_user_basic.xml
+++ b/app/src/main/res/layout/activity_user_basic.xml
@@ -20,7 +20,8 @@
         android:id="@+id/ll1"
         android:layout_width="match_parent"
         android:layout_height="54dp"
-        android:layout_below="@+id/toolbar">
+        android:layout_below="@+id/toolbar"
+        android:layout_marginTop="10dp">
 
         <TextView
             android:id="@+id/tv1"
@@ -35,7 +36,9 @@
             android:id="@+id/tvLoginName"
             android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:layout_marginEnd="10dp"
             android:layout_weight="1"
+            android:ellipsize="end"
             android:gravity="start|center_vertical"
             android:maxLines="1" />
     </LinearLayout>
@@ -44,7 +47,8 @@
         android:id="@+id/ll2"
         android:layout_width="match_parent"
         android:layout_height="54dp"
-        android:layout_below="@+id/ll1">
+        android:layout_below="@+id/ll1"
+        android:layout_marginTop="10dp">
 
         <TextView
             android:id="@+id/tv2"
@@ -58,10 +62,10 @@
         <EditText
             android:id="@+id/edtUserName"
             android:layout_width="0dp"
-            android:layout_height="40dp"
+            android:layout_height="46.5dp"
             android:layout_marginEnd="10dp"
             android:layout_weight="1"
-            android:background="@drawable/shape_c5c5c5"
+            android:background="@drawable/dl_edt_style"
             android:ems="10"
             android:inputType="textPersonName"
             android:maxLength="20"
@@ -75,7 +79,8 @@
         android:id="@+id/ll3"
         android:layout_width="match_parent"
         android:layout_height="54dp"
-        android:layout_below="@+id/ll2">
+        android:layout_below="@+id/ll2"
+        android:layout_marginTop="10dp">
 
         <TextView
             android:id="@+id/tv3"
@@ -89,10 +94,10 @@
         <EditText
             android:id="@+id/edtEmail"
             android:layout_width="0dp"
-            android:layout_height="40dp"
+            android:layout_height="46.5dp"
             android:layout_marginEnd="10dp"
             android:layout_weight="1"
-            android:background="@drawable/shape_c5c5c5"
+            android:background="@drawable/dl_edt_style"
             android:ems="10"
             android:inputType="textEmailAddress"
             android:maxLength="20"
@@ -106,7 +111,8 @@
         android:id="@+id/ll4"
         android:layout_width="match_parent"
         android:layout_height="54dp"
-        android:layout_below="@+id/ll3">
+        android:layout_below="@+id/ll3"
+        android:layout_marginTop="10dp">
 
         <TextView
             android:id="@+id/tv4"
@@ -120,10 +126,10 @@
         <EditText
             android:id="@+id/edtDepart"
             android:layout_width="0dp"
-            android:layout_height="40dp"
+            android:layout_height="46.5dp"
             android:layout_marginEnd="10dp"
             android:layout_weight="1"
-            android:background="@drawable/shape_c5c5c5"
+            android:background="@drawable/dl_edt_style"
             android:ems="10"
             android:inputType="text"
             android:maxLength="20"
@@ -137,7 +143,8 @@
         android:id="@+id/ll5"
         android:layout_width="match_parent"
         android:layout_height="54dp"
-        android:layout_below="@+id/ll4">
+        android:layout_below="@+id/ll4"
+        android:layout_marginTop="10dp">
 
         <TextView
             android:id="@+id/tv5"
@@ -151,10 +158,10 @@
         <EditText
             android:id="@+id/edtTelephone"
             android:layout_width="0dp"
-            android:layout_height="40dp"
+            android:layout_height="46.5dp"
             android:layout_marginEnd="10dp"
             android:layout_weight="1"
-            android:background="@drawable/shape_c5c5c5"
+            android:background="@drawable/dl_edt_style"
             android:ems="10"
             android:inputType="phone"
             android:maxLength="20"
