--- a/app/src/main/res/layout/activity_user_pwd.xml
+++ b/app/src/main/res/layout/activity_user_pwd.xml
@@ -21,7 +21,8 @@
         android:id="@+id/ll1"
         android:layout_width="match_parent"
         android:layout_height="54dp"
-        android:layout_below="@+id/toolbar">
+        android:layout_below="@+id/toolbar"
+        android:layout_marginTop="10dp">
 
         <TextView
             android:id="@+id/tv1"
@@ -35,10 +36,10 @@
         <EditText
             android:id="@+id/edtOldPassword"
             android:layout_width="0dp"
-            android:layout_height="40dp"
+            android:layout_height="46.5dp"
             android:layout_marginEnd="10dp"
             android:layout_weight="1"
-            android:background="@drawable/shape_c5c5c5"
+            android:background="@drawable/dl_edt_style"
             android:ems="10"
             android:inputType="textPassword"
             android:maxLength="20"
@@ -52,7 +53,8 @@
         android:id="@+id/ll2"
         android:layout_width="match_parent"
         android:layout_height="54dp"
-        android:layout_below="@+id/ll1">
+        android:layout_below="@+id/ll1"
+        android:layout_marginTop="10dp">
 
         <TextView
             android:id="@+id/tv2"
@@ -66,10 +68,10 @@
         <EditText
             android:id="@+id/edtNewPassword"
             android:layout_width="0dp"
-            android:layout_height="40dp"
+            android:layout_height="46.5dp"
             android:layout_marginEnd="10dp"
             android:layout_weight="1"
-            android:background="@drawable/shape_c5c5c5"
+            android:background="@drawable/dl_edt_style"
             android:ems="10"
             android:inputType="textPassword"
             android:maxLength="20"
@@ -83,7 +85,8 @@
         android:id="@+id/ll3"
         android:layout_width="match_parent"
         android:layout_height="54dp"
-        android:layout_below="@+id/ll2">
+        android:layout_below="@+id/ll2"
+        android:layout_marginTop="10dp">
 
         <TextView
             android:id="@+id/tv3"
@@ -97,10 +100,10 @@
         <EditText
             android:id="@+id/edtConfirmPassword"
             android:layout_width="0dp"
-            android:layout_height="40dp"
+            android:layout_height="46.5dp"
             android:layout_marginEnd="10dp"
             android:layout_weight="1"
-            android:background="@drawable/shape_c5c5c5"
+            android:background="@drawable/dl_edt_style"
             android:ems="10"
             android:inputType="textPassword"
             android:maxLength="20"
