--- a/app/src/main/res/layout/activity_user_basic.xml
+++ b/app/src/main/res/layout/activity_user_basic.xml
@@ -40,6 +40,7 @@
             android:layout_weight="1"
             android:background="@drawable/dl_edt_style"
             android:ems="10"
+            android:imeOptions="actionNext"
             android:inputType="textPersonName"
             android:maxLength="20"
             android:maxLines="1"
@@ -72,6 +73,7 @@
             android:layout_weight="1"
             android:background="@drawable/dl_edt_style"
             android:ems="10"
+            android:imeOptions="actionNext"
             android:inputType="textPersonName"
             android:maxLength="20"
             android:maxLines="1"
@@ -104,6 +106,7 @@
             android:layout_weight="1"
             android:background="@drawable/dl_edt_style"
             android:ems="10"
+            android:imeOptions="actionNext"
             android:inputType="textEmailAddress"
             android:maxLength="20"
             android:maxLines="1"
@@ -136,6 +139,7 @@
             android:layout_weight="1"
             android:background="@drawable/dl_edt_style"
             android:ems="10"
+            android:imeOptions="actionNext"
             android:inputType="text"
             android:maxLength="20"
             android:maxLines="1"
@@ -168,7 +172,42 @@
             android:layout_weight="1"
             android:background="@drawable/dl_edt_style"
             android:ems="10"
+            android:imeOptions="actionDone"
             android:inputType="phone"
+            android:maxLength="20"
+            android:maxLines="1"
+            android:padding="2dp"
+            android:textSize="14sp"
+            tools:ignore="Autofill,LabelFor" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/ll6"
+        android:layout_width="match_parent"
+        android:layout_height="54dp"
+        android:layout_below="@+id/ll5"
+        android:layout_marginTop="10dp"
+        android:visibility="gone">
+
+        <TextView
+            android:id="@+id/tv6"
+            android:layout_width="90dp"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="密码"
+            android:textSize="14sp"
+            tools:ignore="HardcodedText" />
+
+        <EditText
+            android:id="@+id/edtPassword"
+            android:layout_width="0dp"
+            android:layout_height="46.5dp"
+            android:layout_marginEnd="10dp"
+            android:layout_weight="1"
+            android:background="@drawable/dl_edt_style"
+            android:ems="10"
+            android:imeOptions="actionDone"
+            android:inputType="textPassword"
             android:maxLength="20"
             android:maxLines="1"
             android:padding="2dp"
