--- a/app/src/main/res/layout/activity_user_manage.xml
+++ b/app/src/main/res/layout/activity_user_manage.xml
@@ -2,8 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/parentView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@mipmap/dl_bg"
     android:orientation="vertical">
 
     <android.support.v7.widget.Toolbar
@@ -15,18 +17,18 @@
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
 
-        <Button
-            android:id="@+id/btnRight"
+        <ImageView
+            android:id="@+id/imgRight"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
             android:layout_marginEnd="10dp"
-            android:background="@android:color/transparent"
-            android:maxLines="1"
-            android:text="Add"
-            android:textColor="@color/white"
-            android:textSize="20sp"
-            tools:ignore="HardcodedText" />
+            android:background="@drawable/selector_1affffff"
+            android:minWidth="?attr/actionBarSize"
+            android:minHeight="?attr/actionBarSize"
+            android:scaleType="centerInside"
+            android:src="@mipmap/ic_add"
+            tools:ignore="ContentDescription,HardcodedText" />
 
     </android.support.v7.widget.Toolbar>
 
@@ -34,7 +36,7 @@
         android:id="@+id/refreshLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/primary"
+        android:background="@android:color/transparent"
         app:srlAccentColor="@android:color/white"
         app:srlEnablePreviewInEditMode="true"
         app:srlPrimaryColor="@color/primary">
@@ -47,9 +49,11 @@
             android:id="@+id/listView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@mipmap/dl_bg"
+            android:layout_margin="5dp"
+            android:divider="@null"
+            android:dividerHeight="10dp"
             android:overScrollMode="never"
-            tools:listitem="@android:layout/simple_list_item_2" />
+            tools:listitem="@layout/simple_list_item_2" />
 
         <com.scwang.smartrefresh.layout.footer.ClassicsFooter
             android:layout_width="match_parent"
