用户登陆日志界面
Code Source From: Self Code
Description:  [Optional]
Jira:  #[Optional]
市场项目编号（名称）：[Optional]

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,4 +17,8 @@
         <item name="android:windowFullscreen">true</item>
         <item name="android:windowBackground">@mipmap/dl_bg</item>
     </style>
+
+    <style name="ToolbarStyle" parent="Base.Widget.AppCompat.ActionBar">
+        <item name="android:minHeight">@dimen/tab_height</item>
+    </style>
 </resources>
