--- a/app/src/main/res/layout/dialog_del.xml
+++ b/app/src/main/res/layout/dialog_del.xml
@@ -72,7 +72,7 @@
                 android:ellipsize="end"
                 android:maxLines="1"
                 android:text="确认删除"
-                android:textColor="#51ACF2"
+                android:textColor="#4bab54"
                 android:textSize="13sp"
                 tools:ignore="ButtonStyle,HardcodedText,RtlHardcoded" />
 
@@ -82,7 +82,7 @@
                 android:layout_height="34dp"
                 android:layout_marginEnd="44dp"
                 android:layout_weight="0.5"
-                android:background="@drawable/selector_1a51acf2"
+                android:background="@drawable/dl_btn_style"
                 android:ellipsize="end"
                 android:maxLines="1"
                 android:text="取消"
