--- a/app/src/main/res/layout/dialog_del.xml
+++ b/app/src/main/res/layout/dialog_del.xml
@@ -32,7 +32,7 @@
             android:gravity="center_vertical"
             android:maxLines="1"
             android:text="确认删除"
-            android:textSize="19sp"
+            android:textSize="12sp"
             tools:ignore="HardcodedText" />
 
 
@@ -46,10 +46,10 @@
             android:layout_marginStart="44dp"
             android:layout_marginTop="9dp"
             android:ellipsize="end"
-            android:maxLines="1"
-            android:text="删除后用户不可恢复"
+            android:maxLines="2"
+            android:text="删除后不可恢复"
             android:textColor="#999"
-            android:textSize="13sp"
+            android:textSize="10sp"
             tools:ignore="HardcodedText" />
 
         <LinearLayout
@@ -71,7 +71,7 @@
                 android:background="@drawable/selector_1affffff"
                 android:ellipsize="end"
                 android:maxLines="1"
-                android:text="确认删除"
+                android:text="确认"
                 android:textColor="#4bab54"
                 android:textSize="13sp"
                 tools:ignore="ButtonStyle,HardcodedText,RtlHardcoded" />
@@ -87,7 +87,7 @@
                 android:maxLines="1"
                 android:text="取消"
                 android:textColor="#fff"
-                android:textSize="15sp"
+                android:textSize="13sp"
                 tools:ignore="ButtonStyle,HardcodedText" />
         </LinearLayout>
     </LinearLayout>
