--- a/app/src/main/res/layout/activity_sewage_manage.xml
+++ b/app/src/main/res/layout/activity_sewage_manage.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+    android:id="@+id/sewageParentView"
     android:layout_height="match_parent"
     android:orientation="vertical">
     <android.support.v7.widget.Toolbar
@@ -28,7 +29,8 @@
         app:ddtextUnselectedColor="@color/drop_down_unselected"
         app:ddunderlineColor="@color/gray" />
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout
+        android:id="@+id/createSewageLiner"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="16dp"
