--- a/app/src/main/res/layout/activity_water_month.xml
+++ b/app/src/main/res/layout/activity_water_month.xml
@@ -77,8 +77,8 @@
         android:textSize="16sp"
         tools:ignore="HardcodedText" />
 
-    <lecho.lib.hellocharts.view.LineChartView
+    <com.github.mikephil.charting.charts.LineChart
         android:id="@+id/chart"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent" />
 </LinearLayout>
