--- a/app/src/main/res/layout/activity_water_up_year.xml
+++ b/app/src/main/res/layout/activity_water_up_year.xml
@@ -74,9 +74,27 @@
         android:textColor="@color/white"
         android:textSize="16sp"
         tools:ignore="HardcodedText" />
+    <com.scwang.smartrefresh.layout.SmartRefreshLayout
+        android:id="@+id/upYearRefreshLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:onClick="onClick"
+        android:background="@android:color/transparent"
+        app:srlAccentColor="@android:color/white"
+        app:srlEnablePreviewInEditMode="true"
+        app:srlPrimaryColor="@color/primary">
+
+    <com.scwang.smartrefresh.layout.header.ClassicsHeader
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
     <com.bin.david.form.core.SmartTable
         android:id="@+id/table"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         />
+        <com.scwang.smartrefresh.layout.footer.ClassicsFooter
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+    </com.scwang.smartrefresh.layout.SmartRefreshLayout>
 </LinearLayout>
