--- a/app/src/main/res/layout/activity_monitor_sewage.xml
+++ b/app/src/main/res/layout/activity_monitor_sewage.xml
@@ -288,7 +288,6 @@
                     android:textColor="@color/secondary_text"
                     android:textSize="12sp" />
             </LinearLayout>
-        </LinearLayout>/
-
+        </LinearLayout>
     </ScrollView>
 </LinearLayout>
