--- a/app/src/main/res/layout/activity_inspection_info_list.xml
+++ b/app/src/main/res/layout/activity_inspection_info_list.xml
@@ -30,7 +30,7 @@
             android:divider="@null"
             android:dividerHeight="10dp"
             android:overScrollMode="never"
-            tools:listitem="@layout/list_item_repairment_list" />
+            tools:listitem="@layout/list_item_inspection_info" />
 
         <com.scwang.smartrefresh.layout.footer.ClassicsFooter
             android:layout_width="match_parent"
@@ -78,7 +78,6 @@
             android:orientation="vertical">
 
             <LinearLayout
-                android:id="@+id/ll1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp">
@@ -88,7 +87,7 @@
                     android:layout_width="90dp"
                     android:layout_height="match_parent"
                     android:gravity="center"
-                    android:text="请选择区县站点"
+                    android:text="请选择区县"
                     android:textSize="14sp"
                     tools:ignore="HardcodedText" />
 
@@ -96,7 +95,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                     <com.yyydjk.library.DropDownMenu
-                        android:id="@+id/sewageDropDownMenu"
+                        android:id="@+id/areaDropDownMenu"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         app:dddividerColor="@color/gray"
@@ -113,9 +112,8 @@
             </LinearLayout>
 
             <LinearLayout
-                android:id="@+id/ll2"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="54dp"
                 android:layout_marginTop="10dp">
 
                 <TextView
@@ -123,42 +121,7 @@
                     android:layout_width="90dp"
                     android:layout_height="match_parent"
                     android:gravity="center"
-                    android:text="处理状态"
-                    android:textSize="14sp"
-                    tools:ignore="HardcodedText" />
-
-                <com.tmxk.wscl.android.util.MyScrollView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-                    <com.yyydjk.library.DropDownMenu
-                        android:id="@+id/statusDropDownMenu"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        app:dddividerColor="@color/gray"
-                        app:ddmaskColor="@color/mask_color"
-                        app:ddmenuBackgroundColor="@color/white"
-                        app:ddmenuMenuHeightPercent="0.5"
-                        app:ddmenuSelectedIcon="@mipmap/drop_down_selected_icon"
-                        app:ddmenuTextSize="13sp"
-                        app:ddmenuUnselectedIcon="@mipmap/drop_down_unselected_icon"
-                        app:ddtextSelectedColor="@color/drop_down_selected"
-                        app:ddtextUnselectedColor="@color/drop_down_unselected"
-                        app:ddunderlineColor="@color/gray" />
-                </com.tmxk.wscl.android.util.MyScrollView>
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/ll3"
-                android:layout_width="match_parent"
-                android:layout_height="54dp"
-                android:layout_marginTop="10dp">
-
-                <TextView
-                    android:id="@+id/tv3"
-                    android:layout_width="90dp"
-                    android:layout_height="match_parent"
-                    android:gravity="center"
-                    android:text="报修起始时间"
+                    android:text="开始时间"
                     android:textSize="14sp"
                     tools:ignore="HardcodedText" />
 
@@ -181,17 +144,16 @@
             </LinearLayout>
 
             <LinearLayout
-                android:id="@+id/ll4"
                 android:layout_width="match_parent"
                 android:layout_height="54dp"
                 android:layout_marginTop="10dp">
 
                 <TextView
-                    android:id="@+id/tv4"
+                    android:id="@+id/tv3"
                     android:layout_width="90dp"
                     android:layout_height="match_parent"
                     android:gravity="center"
-                    android:text="报修结束时间"
+                    android:text="结束时间"
                     android:textSize="14sp"
                     tools:ignore="HardcodedText" />
 
@@ -220,7 +182,7 @@
                 android:layout_margin="10dp"
                 android:background="@drawable/dl_btn_style"
                 android:onClick="onClick"
-                android:text="查找"
+                android:text="搜索"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 tools:ignore="HardcodedText" />
